1. AI表模型管理添加业务功能配置 2. 优化数据库查询智能体skill